--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 html {
+
 	margin: 0;
 	padding: 0;
 }
@@ -32,6 +33,7 @@ body {
 	position: absolute;
 	top: 5em;
 	right: 5em;
+	height: auto;
 }
 
 #main_names {
@@ -100,6 +102,7 @@ body {
   color: #000;
 }
 
+
 /**WEDDING - EVENT CARD**/
 .demo-card-event.mdl-card {
   width: 512;
@@ -159,4 +162,12 @@ body {
 
 .demo-card-wide-reg > .mdl-card__menu {
   color: #000;
+}
+
+.circle {
+	border-radius: 50%;
+}
+
+ul {
+	list-style-type: none;
 }
