--- a/css/style.css
+++ b/css/style.css
@@ -150,3 +150,25 @@ body {
 ul {
 	list-style-type: none;
 }
+
+/* unvisited link */
+a:link {
+    color: ##f4ff81;
+    text-decoration: none;
+}
+
+/* visited link */
+a:visited {
+    color: ##f4ff81;
+    text-decoration: none;
+}
+
+/* mouse over link */
+a:hover {
+    color: ##f4ff81;
+}
+
+/* selected link */
+a:active {
+    color: ##f4ff81;
+}
