--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,19 @@ body {
 
 /**INDEX**/
 .main_content {
-	position: absolute;
-	top: 5em;
-	right: 5em;
-	height: auto;
-  max-width: 100%;
+	  max-width: 100%;
+	  margin: 0;
+	  float: right;
+	  padding-top: 2em;
+	  padding-right: 4em;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #main_names {
