--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,9 @@ body {
 
 /**INDEX**/
 .main_content {
-	  max-width: 100%;
-	  margin: 0;
+	  max-width: 97%;
+	  margin: .5em;
 	  float: right;
-	  padding-top: 2em;
-	  padding-right: 4em;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -48,7 +46,7 @@ body {
 #main_names {
 	font-family : Elegant;
 	text-align: center;
-	font-size: 100px;
+	font-size: 85px;
 }
 
 #main_subject {
@@ -56,13 +54,13 @@ body {
 	padding-top: 1em;
 	padding-bottom: 1em;
 	text-align: center;
-	font-size: 75px;
+	font-size: 55px;
 }
 
 #main_date {
 	font-family : Grunge;
 	text-align: center;
-	font-size: 60px;
+	font-size: 50px;
 	padding-bottom: 1em;
 }
 
