--- a/css/style.css
+++ b/css/style.css
@@ -90,27 +90,6 @@ body {
   color: #fff;
 }
 
-/**STORY - WIDE CARD**/
-.demo-card-wide-story.mdl-card {
-  width: 512px;
-  padding: .5em;
-}
-
-.demo-card-wide-story > .mdl-card__title > h2 {
-  color: #fff;
-}
-
-.demo-card-wide-story > .mdl-card__title {
-  align-items: flex-start;
-  height: 350px;
-  background: url('../images/joe_nikki.jpg') center / cover;
-}
-
-.demo-card-wide-story > .mdl-card__menu {
-  color: #000;
-}
-
-
 /**PROPOSAL - EVENT CARD**/
 .demo-card-wide-proposal.mdl-card {
  max-width: 100%;
@@ -149,8 +128,90 @@ body {
   color: #000;
 }
 
+.demo-card-wide-reg-contact > .mdl-card__title {
+  align-items: flex-start;
+  height: 350px;
+  background: url('../images/joe_nikki4.jpg') center / cover;
+}
+
+/**CONTACT - WIDE CARD**/
+.demo-card-wide-con.mdl-card {
+  width: 512px;
+}
+
+.demo-card-wide-con > .mdl-card__title > h2 {
+  color: #fff;
+}
+
+.demo-card-wide-con > .mdl-card__title {
+  align-items: flex-start;
+  height: 350px;
+  background: url('../images/joe_nikki3.jpg') center / cover;
+}
+
+.demo-card-wide-con > .mdl-card__menu {
+  color: #000;
+}
+
+.demo-card-wide-con > .mdl-card__title {
+  align-items: flex-start;
+  height: 350px;
+  background: url('../images/joe_nikki5.jpg') center / cover;
+}
+
 .circle {
-	border-radius: 50%;
+  border-radius: 50%;
+}
+
+/**MAP - WIDE CARD**/
+.demo-card-wide-map.mdl-card {
+  width: 512px;
+}
+
+.demo-card-wide-map > .mdl-card__title > h2 {
+  color: #fff;
+}
+
+.demo-card-wide-map > .mdl-card__title {
+  align-items: flex-start;
+  height: 350px;
+  background: url('../images/joe_nikki4.jpg') center / cover;
+}
+
+.demo-card-wide-map > .mdl-card__menu {
+  color: #000;
+}
+
+.demo-card-wide-map > .mdl-card__title {
+  align-items: flex-start;
+  height: 350px;
+  background: url('../images/joe_nikki4.jpg') center / cover;
+}
+
+
+/**STORY - WIDE CARD**/
+.demo-card-wide-story.mdl-card {
+  width: 512px;
+}
+
+.demo-card-wide-story > .mdl-card__title > h2 {
+  color: #fff;
+}
+
+.demo-card-wide-story > .mdl-card__title {
+  align-items: flex-start;
+  height: 350px;
+  background: url('../images/joe_nikki2.jpg') center / cover;
+}
+
+.demo-card-wide-story > .mdl-card__menu {
+  color: #000;
+}
+
+.demo-card-wide-story > .mdl-card__title {
+  align-items: flex-start;
+  height: 350px;
+  background: url('../images/joe_nikki2.jpg') center / cover;
 }
 
 ul {
